--- a/app/views/board/home.html.erb
+++ b/app/views/board/home.html.erb
@@ -1,4 +1,4 @@
 <h1>Hello World</h1>
 <body>
-<%= button_to "Start Game 1",board1_path,{:action =>"new",:class => "btn black btn-lg"}%>
+<%= button_to "Start Game 1",board_path,{:class => "btn black btn-lg"}%>
 </body>
