--- a/app/views/board/board.html.erb
+++ b/app/views/board/board.html.erb
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
-<h1>This is the board</h1>
 <html>
 <style>
 
+
+.title
+{
+  font-size: 350%;
+  text-align: center;
+  margin-top: -1%;
+}
+.error_message
+{
+  text-align: center;
+  font-size: 100%;
+  color: red;
+  margin-top: -2%;
+}
+
+
 .row-matrix
 {
-  width: 60%;
-  height: 60%;
+  width: 70%;
+  height: 70%;
   margin-left: 31%;
-  float: left;
+  margin-right: 31%;
   clear:left;
 
 }
@@ -35,11 +50,51 @@
   background-color:black;
   color:white;
 }
+.btn.reset{
+  width: 7%;
+  height: 17%;
+  font-weight: 600;
+  font-size: 30px;
+  border-radius: 20%;
+  margin-left: 37%;
+}
+.btn.tile_count{
+  width: 4%;
+  margin-left: 3%;
+  margin-bottom: 0.5%;
+}
+
+.turn
+{
+  width: 7%;
+  height: 17%;
+  font-weight: 600;
+  font-size: 30px;
+  border-radius: 20%;
+  margin-left: 4%;
+}
+
 </style>
 
 <body>
-<h1>Othello Board</h1>
+<h1 class ='title'>Othello Board</h1>
 <h2>
+  <%  if $board.get_valid_move == false %>
+  <p class = "error_message">That was an invalid move. Try again</p>
+  <%  end                               %>
+</h2>
+<h3>
+<%= button_to "Reset",new_path,{:action =>:new,:class =>'btn reset'}%>
+<%= button_to $board.get_tile_count[0],board_path,{:action =>:new,:class =>'btn white tile_count reset'}%>
+<%= button_to $board.get_tile_count[1],board_path,{:action =>:new,:class =>'btn black tile_count reset'}%>
+<%  if $board.get_turn == "white"%>
+<%= button_to $board.get_turn,board_path,{:action =>:new,:class =>'btn white turn'}%>
+<%  else                         %>
+<%= button_to $board.get_turn,board_path,{:action =>:new,:class =>'btn black turn'}%>
+<%  end                          %>
+</h3>
+
+<h4>
 <%placement_string = 0,0%>
 <% $game1.each do |i|                   %>
       <div class = "row-matrix">
@@ -64,6 +119,6 @@
     <%placement_string[0]+=1%>
   </div>
   <%end%>
-</h2>
+</h4>
 </body>
 </html>
