--- a/app/views/board/board.html.erb
+++ b/app/views/board/board.html.erb
@@ -9,7 +9,7 @@
   text-align: center;
   margin-top: -1%;
 }
-.error_message
+.btn.error_message
 {
   text-align: center;
   font-size: 100%;
@@ -50,28 +50,40 @@
   background-color:black;
   color:white;
 }
-.btn.reset{
-  width: 7%;
-  height: 17%;
-  font-weight: 600;
-  font-size: 30px;
-  border-radius: 20%;
-  margin-left: 37%;
-}
-.btn.tile_count{
-  width: 4%;
-  margin-left: 3%;
-  margin-bottom: 0.5%;
-}
-
-.turn
+.btn.reset
 {
   width: 7%;
   height: 17%;
   font-weight: 600;
   font-size: 30px;
   border-radius: 20%;
-  margin-left: 4%;
+  margin-left: 32%;
+}
+.btn.tile_count{
+  width: 4%;
+  margin-left: 2%;
+  margin-bottom: 0.5%;
+}
+
+.btn.turn
+{
+  width: 7%;
+  height: 17%;
+  font-weight: 600;
+  font-size: 30px;
+  border-radius: 20%;
+  margin-left: 2%;
+}
+
+.btn.undo
+{
+  width: 7%;
+  height: 17%;
+  font-weight: 600;
+  font-size: 30px;
+  border-radius: 20%;
+  margin-left: 2%;
+
 }
 
 </style>
@@ -85,12 +97,13 @@
 </h2>
 <h3>
 <%= button_to "Reset",new_path,{:action =>:new,:class =>'btn reset'}%>
-<%= button_to $board.get_tile_count[0],board_path,{:action =>:new,:class =>'btn white tile_count reset'}%>
-<%= button_to $board.get_tile_count[1],board_path,{:action =>:new,:class =>'btn black tile_count reset'}%>
+<%= button_to "Undo",undo_path,{:action =>:undo,:class =>'btn undo'}%>
+<%= button_to $board.get_tile_count[0],board_path,{:class =>'btn white tile_count reset'}%>
+<%= button_to $board.get_tile_count[1],board_path,{:class =>'btn black tile_count reset'}%>
 <%  if $board.get_turn == "white"%>
-<%= button_to $board.get_turn,board_path,{:action =>:new,:class =>'btn white turn'}%>
+<%= button_to $board.get_turn,board_path,{:class =>'btn white turn'}%>
 <%  else                         %>
-<%= button_to $board.get_turn,board_path,{:action =>:new,:class =>'btn black turn'}%>
+<%= button_to $board.get_turn,board_path,{:class =>'btn black turn'}%>
 <%  end                          %>
 </h3>
 
